# goonto

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs  flake.nix  goonto-res.rc  goonto.json  goonto.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: index.html
res/: goonto.yml
res/linux/: Goonto.desktop
res/win/: goonto-res.rc  goonto.exe.manifest  scheduler-task.xml
src/: config.rs  editor.rs  main.rs  source.rs
src/features/: clipboard.rs  discord.rs  mod.rs  notifs.rs  popups.rs  repeat.rs  subliminal.rs  typing.rs  wallpaper.rs  web.rs
src/sources/: e621.rs  local.rs  mod.rs  realbooru.rs  rule34.rs
