[package]
name = "goonto"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = "1.33.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
# rule34.xxx's api uses xml?
serde-xml-rs = "0.6.0"
rand = "0.8.5"
directories = "5.0.1"
notify-rust = "4"
enigo = "0.1.3"
fltk = { version = "1.4.16", features = ["no-pango"] }
# I don't THINK FLTK has a way to do this
global-hotkey = "0.4.0"
single-instance = "0.3.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json", "stream"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies.fltk]
version = "1.4.16"
features = ["fltk-bundled"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
