[package]
name = "goonto"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
# rule34.xxx's api uses xml?
serde-xml-rs = "0.6.0"
rand = "0.8.5"
directories = "5.0.1"
enigo = "0.1.3"
fltk = { version = "1.4.29", features = ["no-pango"] }
# I don't THINK FLTK has a way to do this
global-hotkey = "0.4.0"
single-instance = "0.3.3"
defaults = "0.2.0"
discord-rich-presence = "0.2.3"
simplelog = "0.12.1"
log = "0.4.2"
dialog = "0.3.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json", "stream"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_WindowsProgramming",
    "Win32_System_Variant",
    "Win32_System_TaskScheduler",
    "Win32_System",
    "Win32_Security",
    "Win32",
]}

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[target.'cfg(not(target_os = "linux"))'.dependencies.fltk]
version = "1.4.16"
features = ["fltk-bundled"]

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
